Fix iOS Safari pour button liquid fill bleeding outside glass
Add -webkit-mask-image to .glass to force WebKit to create a
compositing layer that correctly clips children to the border-radius.
This fixes a known iOS Safari bug where overflow: hidden combined with
border-radius fails to clip child content.

--- a/src/components/PourButton/PourButton.module.css
+++ b/src/components/PourButton/PourButton.module.css
@@ -41,6 +41,7 @@
   border-block-start: none;
   border-radius: 0 0 3px 3px;
   overflow: hidden;
+  -webkit-mask-image: linear-gradient(#fff, #fff);
 }
 
 .liquid {
